Prevent registration for overlapping time slots

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -36,6 +36,9 @@ div.actions {
 #notice {
   color: green; }
 
+#warning {
+  color: red; }
+
 .field_with_errors {
   padding: 2px;
   background-color: red;
